--- a/gallows.ipynb
+++ b/gallows.ipynb
@@ -48,11 +48,11 @@
     "class Game:\n",
     "    def __init__(self, solution, players=None):\n",
     "        self.solution = solution\n",
-    "        self.remaining_letters = [set(self.solution) for _ in players]\n",
-    "        self.solved = [False for _ in players]\n",
-    "        self.players = players\n",
+    "        self.players = players if players else [0]\n",
+    "        self.remaining_letters = [set(self.solution) for _ in self.players]\n",
+    "        self.solved = [False for _ in self.players]\n",
     "\n",
-    "    def render(self, player_index):\n",
+    "    def render(self, player_index=0):\n",
     "        rendering = \"\"\n",
     "        for letter in self.solution:\n",
     "            if letter in self.remaining_letters[player_index]:\n",
@@ -62,7 +62,7 @@
     "        return rendering\n",
     "\n",
     "    def play_move(self, letter, player_index=0):\n",
-    "        self.solved[player_index] = self._play(letter, player_index)\n",
+    "        self.solved[player_index] = self._play_move(letter, player_index)\n",
     "        return Learnable(\n",
     "            solved=self.solved[player_index],\n",
     "            number_hits=self.solution.count(letter),\n",
@@ -75,11 +75,8 @@
     "                if not self.solved[i]:\n",
     "                    player.learn(self.play_move(player.move(), i))\n",
     "\n",
-    "    def _play(self, letter, player_index=0):\n",
-    "        if letter in self.remaining_letters[player_index]:\n",
-    "            self.remaining_letters[player_index] = self.remaining_letters[\n",
-    "                player_index\n",
-    "            ] - set(letter)\n",
+    "    def _play_move(self, letter, player_index):\n",
+    "        self.remaining_letters[player_index].discard(letter)\n",
     "        return len(self.remaining_letters[player_index]) == 0"
    ]
   },
@@ -182,7 +179,9 @@
     "        return (new_corpus, new_move_list)\n",
     "\n",
     "    def _random_moves(self):\n",
-    "        return random.shuffle(string.ascii_lowercase)\n",
+    "        new_move_list = list(string.ascii_lowercase)\n",
+    "        random.shuffle(new_move_list)\n",
+    "        return new_move_list\n",
     "\n",
     "    def _get_moves_freq_char(self, corpus):\n",
     "        c = \"\".join([\"\".join(word for word in corpus)])\n",
@@ -226,10 +225,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "distant\n",
-      "p: 12 guesses; 6 errors\n",
-      "q: 15 guesses; 9 errors\n",
-      "r: 15 guesses; 9 errors\n"
+      "prefer\n",
+      "p: 25 guesses; 21 errors\n",
+      "q: 20 guesses; 16 errors\n",
+      "r: 17 guesses; 13 errors\n"
      ]
     }
    ],
@@ -261,7 +260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed in 600.75958 seconds.\n"
+      "Completed in 599.507796 seconds.\n"
      ]
     }
    ],
@@ -277,8 +276,6 @@
     "errors = [[], [], []]\n",
     "moves = [[], [], []]\n",
     "\n",
-    "total_words = len(CORPUS)\n",
-    "\n",
     "t0 = time.process_time()\n",
     "for i_w, word in enumerate(CORPUS):\n",
     "    g = Game(solution=word, players=[p, q, r])\n",
@@ -293,6 +290,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Almost exactly 10 minutes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -301,12 +305,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[804, 1354, 2711]\n"
+      "[852, 1346, 2777]\n"
      ]
     }
    ],
    "source": [
-    "wins = [0,0,0]\n",
+    "wins = [0, 0, 0]\n",
     "for i in range(len(g.players)):\n",
     "    wins[i] = len([game for game in errors[i] if game < 6])\n",
     "\n",
